Notebook - Migrate to React - Selenium Tests - Convert table to checklist table